# drawing-robot-ros2

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  conf.py  config.yaml  convertlogtimestamp.sh  drawing_robot_ros2.repos  gen-docs.sh  index.rst  package.xml  rebuild.sh
.docker/: build.bash  run.bash
scripts/: convertlogtimestamp.sh  gen-docs.sh  log_drawing.sh
scripts/plot_lite6_csv/: plot_lite6_csv.py  shell.nix
src/axidraw_controller/: CMakeLists.txt  Doxyfile  README.md  package.xml  test.py
src/axidraw_controller/config/: config.yaml
src/axidraw_controller/launch/: axidraw_controller.launch.py
src/axidraw_controller/src/: test.py
src/axidraw_controller/src/cpp/: axidraw_controller.cpp
src/axidraw_controller/src/py/: axidraw_serial.py
src/custom_xarm_description/: CMakeLists.txt  package.xml
src/custom_xarm_description/urdf/: xarm_device.urdf.xacro  xarm_device_macro.xacro
src/custom_xarm_description/urdf/lite6/: lite6.urdf.xacro  lite6_robot_macro.xacro
src/custom_xarm_gazebo/: CMakeLists.txt  README.md  package.xml
src/custom_xarm_gazebo/launch/: _robot_beside_table_gazebo.launch.py  lite6_virtual_surface.launch.py
src/custom_xarm_gazebo/worlds/: virtual_surface_world.sdf
src/custom_xarm_moveit_config/: CMakeLists.txt  package.xml
src/custom_xarm_moveit_config/config/lite6/: cartesian_limits.yaml  joint_limits.yaml
src/custom_xarm_moveit_config/launch/: _robot_moveit_common.launch.py  _robot_moveit_gazebo_fake.launch.py  lite6_moveit_gazebo.launch.py
src/custom_xarm_moveit_config/launch/lib/: robot_moveit_config_lib.py
src/custom_xarm_moveit_config/srdf/: xarm.srdf.xacro  xarm_macro.srdf.xacro
src/draw_svg/: CMakeLists.txt  README.md  package.xml  rebuild.sh  test.sh  tf.txt
src/draw_svg/launch/: default.launch.py  draw_svg.launch.py  lite6_pen.launch.py  lite6_real.launch.py  log_position.launch.py  xarm_draw_svg.launch.py
src/draw_svg/launch/robots/: _robot_beside_table_gazebo.launch.py  lite6_table.launch.py  robot_lite6.launch.py
src/draw_svg/launch/worlds/: world_draw_svg.launch.py
src/draw_svg/src/cpp/: draw_svg.cpp  follow.cpp  log_position.cpp
src/draw_svg/src/py/: draw_svg.py  drawing_surface.py  follow.py  readsvg.py
src/draw_svg/src/py/robots/: lite6.py
src/draw_svg/urdf/: lite6.tmp.urdf  xarm_pen.urdf.xacro
src/draw_svg/worlds/: draw_svg_world.sdf  follow_target.sdf
src/drawing_controller/: CMakeLists.txt  README.md  package.xml  requirements.txt  setup.cfg  setup.py
src/drawing_controller/drawing_controller/: drawing_controller.py  svg_path_parser.py  svg_processor.py
src/drawing_controller/src/: drawing_controller.py
src/lite6_controller/: CMakeLists.txt  Doxyfile  README.md  lite6_controller.repos  package.xml  rebuild.sh
src/lite6_controller/launch/: lite6_gazebo.launch.py  lite6_real.launch.py  lite6_real_calibration.launch.py  lite6_real_no_gui.launch.py
src/lite6_controller/src/: lite6_calibration.cpp  lite6_controller.cpp  lite6_trajectory_executor.cpp
src/robot_controller/: CMakeLists.txt  Doxyfile  README.md  package.xml
src/robot_controller/include/robot_controller/: robot_controller.hpp
src/robot_controller/src/: robotcontroller.cpp
src/robot_controller/src/cpp/: dummy_controller.cpp  robot_controller.cpp
src/robot_interfaces/: CMakeLists.txt  README.md  package.xml
src/robot_interfaces/action/: ExecuteMotion.action
src/robot_interfaces/msg/: Motion.msg  Points.msg
src/robot_interfaces/srv/: ExecuteMotion.srv  Status.srv
src/virtual_drawing_surface/: CMakeLists.txt  Doxyfile  README.md  package.xml  requirements.txt
src/virtual_drawing_surface/src/py/: drawing_surface.py
