<?xml version="1.0"?>
<package format="3">
  <name>drawing-robot-ros2</name>
  <version>0.0.0</version>
  <description>drawing-robot-ros2</description>
  <maintainer email="a@a.com">a</maintainer>
  <author>a</author>
  <license>GPL</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>

  <exec_depend>moveit</exec_depend>
  <exec_depend>pymoveit2</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>rviz2</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
