<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>draw_svg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- <depend>ign_moveit2_examples</depend> -->
  <depend>rclcpp</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>python3-lxml</depend>
  <depend>python3-tk</depend>
  <depend>python-imaging</depend>
  <depend>python-numpy</depend>
  <depend>python3-pil.imagetk</depend>
  <depend>xarm_description</depend>
  <depend>xarm_moveit_config</depend>
  <depend>xarm_moveit_servo</depend>
  <depend>moveit_servo</depend>

  <!-- <depend>moveit_ros_planning_interface</depend> -->

  <!-- <exec_depend>moveit_servo</exec_depend> -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
