<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lite6_controller</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="root@todo.todo">root</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <!-- <depend>robot_interfaces</depend> -->
  <!-- <depend>robot_controller</depend> -->
  <depend>moveit</depend>
  <depend>moveit_msgs</depend>
  <depend>xarm_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>moveit_ros_planning_interface</depend>
  <depend>tf2_ros</depend>

  <build_depend>eigen</build_depend>
  <build_depend>geometric_shapes</build_depend>
  <build_depend>moveit_common</build_depend>
  <build_depend>moveit_ros_planning</build_depend>

  <depend>xarm_description</depend>
  <depend>xarm_moveit_config</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
